update author name

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "type": "git",
     "url": "git+https://github.com/SamuelRioTz/OSM-Public-Transport-Downloader.git"
   },
-  "author": "Samuel Rioja",
+  "author": "Samuel RioTz",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/SamuelRioTz/OSM-Public-Transport-Downloader/issues"
