--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "url": "https://github.com/trufi-app/osm-public-transport-export/issues"
   },
   "dependencies": {
+    "@turf/boolean-equal": "^6.0.1",
+    "@turf/helpers": "^6.1.4",
     "debug": "^4.1.1"
   }
 }
