--- a/package.json
+++ b/package.json
@@ -1,33 +1,33 @@
 {
-  "name": "osm-public-transport-export",
-  "version": "1.0.1",
-  "description": "OSM Public Transport Export",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "npm run bolivia",
-    "bolivia": "npm run bolivia:cochabamba && npm run bolivia:santacruz && npm run bolivia:lapaz && npm run bolivia:tarija",
-    "bolivia:cochabamba": "node ./examples/bolivia-cochabamba.js",
-    "bolivia:santacruz": "node ./examples/bolivia-santacruz.js",
-    "bolivia:lapaz": "node ./examples/bolivia-lapaz.js",
-    "ghana": "npm run ghana:accra",
-    "ghana:accra": "node ./examples/ghana-accra.js"
-  },
-  "author": "Samuel Rioja",
-  "license": "MIT",
-  "engines": {
-    "node": ">=8.0"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/trufi-app/osm-public-transport-export.git"
-  },
-  "bugs": {
-    "url": "https://github.com/trufi-app/osm-public-transport-export/issues"
-  },
-  "dependencies": {
-    "@turf/boolean-equal": "^6.0.1",
-    "@turf/helpers": "^6.1.4",
-    "debug": "^4.1.1"
-  }
+    "name": "osm-public-transport-export",
+    "version": "1.0.1",
+    "description": "OSM Public Transport Export",
+    "main": "index.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "start": "node ./start_with_env.js",
+        "bolivia": "npm run bolivia:cochabamba && npm run bolivia:santacruz && npm run bolivia:lapaz && npm run bolivia:tarija",
+        "bolivia:cochabamba": "node ./examples/bolivia-cochabamba.js",
+        "bolivia:santacruz": "node ./examples/bolivia-santacruz.js",
+        "bolivia:lapaz": "node ./examples/bolivia-lapaz.js",
+        "ghana": "npm run ghana:accra",
+        "ghana:accra": "node ./examples/ghana-accra.js"
+    },
+    "author": "Samuel Rioja",
+    "license": "MIT",
+    "engines": {
+        "node": ">=8.0"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/trufi-app/osm-public-transport-export.git"
+    },
+    "bugs": {
+        "url": "https://github.com/trufi-app/osm-public-transport-export/issues"
+    },
+    "dependencies": {
+        "@turf/boolean-equal": "^6.0.1",
+        "@turf/helpers": "^6.1.4",
+        "debug": "^4.1.1"
+    }
 }
